--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://hadiya8149.github.io/Project-Management",
 
   "scripts": {
 
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build ",
+    "deploy":"gh-pages -d dist ",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
